Zero grad issue completed

--- a/AutomaticDifferentiation.ipynb
+++ b/AutomaticDifferentiation.ipynb
@@ -6,7 +6,7 @@
       "name": "AutomaticDifferentiation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0zrZkiusmvzp1JcHzTttT"
+      "authorship_tag": "ABX9TyP/vLMjLkIDSq2yTGd5w/ST"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +25,7 @@
         "\r\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
         "print(w.shape)\r\n",
         "print(dl_dw.shape)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "for var, g in zip(layer.trainable_variables, grad):\r\n",
         "  print(f'{var.name}, shape: {g.shape}')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "  print(g)\r\n",
         "print([var.name for var in tape.watched_variables()])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
         "print('dy/dx0:', grad['x0'])\r\n",
         "print('dy/dx1:', grad['x1'].numpy())"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,7 @@
         "# dz_dx = 2 * y, where y = x ** 2\r\n",
         "print(tape.gradient(z, y).numpy())"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "print(tape.gradient(z, x).numpy())  # 108.0 (4 * x**3 at x = 3)\r\n",
         "print(tape.gradient(y, x).numpy())  # 6.0 (2 * x)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +350,7 @@
         "  z = y * y\r\n",
         "print(tape.gradient(z, x))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +393,7 @@
         "  print(type(x).__name__, \":\", tape.gradient(y, x))\r\n",
         "  x = x + 1   # This should be `x.assign_add(1)`"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
         "\r\n",
         "print(tape.gradient(y, x))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +458,9 @@
         "id": "5M2qTRDtF3us"
       },
       "source": [
-        "3. Took gradients through an integer or string"
+        "3. Took gradients through an integer or string\r\n",
+        "\r\n",
+        "TensorFlow doesn't automatically cast between types, so in practice you'll often get a type error instead of a missing gradient."
       ]
     },
     {
@@ -482,13 +484,61 @@
         "\r\n",
         "print(tape.gradient(y, x))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:The dtype of the target tensor must be floating (e.g. tf.float32) when calling GradientTape.gradient, got tf.int32\n",
             "WARNING:tensorflow:The dtype of the source tensor must be floating (e.g. tf.float32) when calling GradientTape.gradient, got tf.int32\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yVv-sbpBGmBQ"
+      },
+      "source": [
+        "4. Took gradients through a stateful object\r\n",
+        "\r\n",
+        "State stops gradients. When you read from a stateful object the tape can only see the current state, not the history that lead to it.\r\n",
+        "\r\n",
+        "A tf.Tensor is immutable. You can't change a tensor once it's created. It has a value, but no state. All the operations discussed so far are also stateless: The output of a tf.matmul only depends on its inputs.\r\n",
+        "\r\n",
+        "A tf.Variable has internal state, its value. When you use the variable, the state is read. It's normal to calculate a gradient with respect to a variable, but the variable's state blocks gradient calculations from going farther back. For example:\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v3GhxWDnLToA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "642a9eed-52ed-46ae-d9b9-ac8837a2f8d6"
+      },
+      "source": [
+        "x0 = tf.Variable(3.0)\r\n",
+        "x1 = tf.Variable(0.0)\r\n",
+        "\r\n",
+        "with tf.GradientTape() as tape:\r\n",
+        "  # Update x1 = x1 + x0.\r\n",
+        "  x1.assign_add(x0)\r\n",
+        "  # The tape starts recording from x1.\r\n",
+        "  y = x1**2   # y = (x1 + x0)**2\r\n",
+        "\r\n",
+        "# This doesn't work.\r\n",
+        "print(tape.gradient(y, x0))   #dy/dx0 = 2*(x1 + x2)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "None\n"
           ],
           "name": "stdout"
