--- a/ModulesLayersModels.ipynb
+++ b/ModulesLayersModels.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ModulesLayersModels",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDy/MOwjyL/NFL8kW5+AnO"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMtdJScDaPrvBvT0O+xiVDk"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,8 @@
         "id": "EW6bl1gdrrvR"
       },
       "source": [
+        "https://www.tensorflow.org/guide/intro_to_modules\r\n",
+        "\r\n",
         "To do machine learning in TensorFlow, you are likely to need to define, save, and restore a model.\r\n",
         "\r\n",
         "A model is, abstractly:\r\n",
@@ -51,7 +54,7 @@
         "\r\n",
         "%load_ext tensorboard"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +79,7 @@
         "\r\n",
         "simple_module(tf.constant(5.0))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +132,7 @@
         "# Every variable\r\n",
         "print(\"all variables:\", simple_module.variables)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +182,7 @@
         "# Call it, with random results\r\n",
         "print(\"Model results:\", my_model(tf.constant([[2.0, 2.0, 2.0]])))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +217,7 @@
         "for var in my_model.variables:\r\n",
         "  print(var, \"\\n\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +296,7 @@
         "my_model = MySequentialModule(name=\"the_model\")\r\n",
         "print(\"Model results:\", my_model(tf.constant([[2.0, 2.0, 2.0]])))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +345,7 @@
         "checkpoint.write(chkp_path)\r\n",
         "checkpoint.write(chkp_path)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +376,7 @@
       "source": [
         "tf.train.list_variables(chkp_path)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +413,7 @@
         "# Should be the same result as above\r\n",
         "new_model(tf.constant([[2.0, 2.0, 2.0]]))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +467,7 @@
         "# You have made a model with a graph!\r\n",
         "my_model = MySequentialModule(name=\"the_model\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +505,7 @@
       "source": [
         "tf.saved_model.save(my_model, \"the_saved_model\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +544,7 @@
         "# Inspect the SavedModel in the directory\r\n",
         "!ls -l the_saved_model"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +571,7 @@
         "# The variables/ directory contains a checkpoint of the variables \r\n",
         "!ls -l the_saved_model/variables"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +601,7 @@
       "source": [
         "new_model = tf.saved_model.load(\"the_saved_model\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +625,7 @@
       "source": [
         "isinstance(new_model, SequentialModule)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +688,7 @@
         "\r\n",
         "simple_layer = MyDense(name=\"simple\", in_features=3, out_features=3)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,7 +712,7 @@
       "source": [
         "simple_layer([[2.0, 2.0, 2.0]])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,7 +768,7 @@
         "# Create the instance of the layer\r\n",
         "flexible_dense = FlexibleDense(out_features=3)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +792,7 @@
       "source": [
         "flexible_dense.variables"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,7 +830,7 @@
         "# Call it, with predictably random results\r\n",
         "print(\"Model results:\", flexible_dense(tf.constant([[2.0, 2.0, 2.0], [3.0, 3.0, 3.0]])))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +855,7 @@
       "source": [
         "flexible_dense.variables"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +899,7 @@
         "except tf.errors.InvalidArgumentError as e:\r\n",
         "  print(\"Failed:\", e)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,7 +967,7 @@
         "# Call it on a tensor, with random results\r\n",
         "print(\"Model results:\", my_sequential_model(tf.constant([[2.0, 2.0, 2.0]])))\r\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,7 +1001,7 @@
       "source": [
         "my_sequential_model.variables"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1038,7 @@
       "source": [
         "my_sequential_model.submodules"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,7 +1087,7 @@
         "\r\n",
         "my_functional_model.summary()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,7 +1123,7 @@
       "source": [
         "my_functional_model(tf.constant([[2.0, 2.0, 2.0]]))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1172,7 +1175,7 @@
       "source": [
         "my_sequential_model.save(\"exname_of_file\")"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1211,7 +1214,7 @@
       "source": [
         "reconstructed_model = tf.keras.models.load_model(\"exname_of_file\")"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,7 +1255,7 @@
       "source": [
         "reconstructed_model(tf.constant([[2.0, 2.0, 2.0]]))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
